[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-interceptor"
version = "1.0.0a1"
requires-python = ">= 3.10"
description = "WIP"
dependencies = [
    "scapy",
    "pydivert; platform_system=='Windows'",
]

[project.urls]
Repository = "https://github.com/Nemoumbra/network-interceptor.git"
